<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="406dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/Homebutton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:visibility="visible"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/Savebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/liquor_department_rating" />

    <RatingBar
        android:id="@+id/ratingLiquor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:numStars="5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/produce_department_rating" />

    <RatingBar
        android:id="@+id/ratingProduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/meat_department_rating" />

    <RatingBar
        android:id="@+id/ratingMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cheese_selection_rating" />

    <RatingBar
        android:id="@+id/ratingCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ease_of_checkout_rating" />

    <RatingBar
        android:id="@+id/ratingCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textViewAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="Average Rating: __/5" />
</LinearLayout>